infrastructure/base/traefik-forward-auth/003-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-forward-auth
  namespace: kube-system

spec:
  selector:
    app: traefik-forward-auth
  ports:
    - name: http
      port: 80
      targetPort: 4181
      protocol: TCP
